k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None # Headless service (Must for statefulset)
  selector:
    app: myapp
  ports:
  - port: 5432
    targetPort: 5432
