k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-booking-ingress
  annotations: # Tell cert-manager that this ingress needs TLS cert by cluster-issuer that we already made
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx # Have to match exactly IngressClass name in VPS and tell that this ingress is managed by ingress-nginx controller
  tls:
    - hosts:
      - hotel-api.phumitada.com # Domain that want certified(Match with rule.host)
      secretName: hotel-api-tls
  rules:
    - host: hotel-api.phumitada.com # Domain for browser to route in this rule
      http:
        paths:
          - path: / # Match all the path that begin with /
            pathType: Prefix
            backend:
              service:
                name: hotel-booking-api # Need to match exactly with real service name (Can check by kubectl get svc)
                port:
                  number: 5000 # Same port that service expose
